[project]
name = "agentic-ai-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.7.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "sentence-transformers>=2.2.2",
]
